--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,6 @@
 {% load static %}
 
 {% block content %}
-    <h1>Cookbook</h1>
+    <h1>spear</h1>
     <img class="cover" src="{% static 'images/mint.jpg' %}">
-    {% if user.is_authenticated %}
-        <p>Hi, {{ user.username }}</p>
-        <a href="{% url 'logout' %}">Log Out</a>
-    {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">Sign in</a>
-        <a href="{% url 'signup' %}">Sign up</a>
-    {% endif %}
 {% endblock content %}
