--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Join Cookbook{% endblock title %}
 
@@ -7,8 +8,8 @@
     <h2>Welcome to Cookbook!</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-    <button type="submit">Create account</button>        
+        {{ form|crispy }}
+    <button class="btn btn-success" type="submit">Create account</button>        
     </form>
 
 {% endblock content %}
