--- a/templates/_base.html
+++ b/templates/_base.html
@@ -49,14 +49,14 @@
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Sign out</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'account_logout' %}">Sign out</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'login' %}">Sign in</a>
+                        <a class="nav-link active" href="{% url 'account_login' %}">Sign in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'signup' %}">Sign up</a>
+                        <a class="nav-link active" href="{% url 'account_signup' %}">Sign up</a>
                     </li>
                     {% endif %}
                 </ul>
