--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +14,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark mb-4 border">
         <div class="container-fluid">
             
             <a class="navbar-brand" href="{% url 'home' %}">CookBook</a>
@@ -52,6 +53,9 @@
                         <a class="nav-link" aria-current="page" href="{% url 'account_logout' %}">Sign out</a>
                     </li>
                     {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% provider_login_url 'github' %}">Sign in with Github</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url 'account_login' %}">Sign in</a>
                     </li>
