--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,12 +4,13 @@
 {% block title %}Sign in to Cookbook{% endblock title %}
 
 {% block content %}
-
+    <div class="login_complete">
     <h2>Sign in to Cookbook</h2>
-    <form method="post">
+    <form method="post" class="login_form">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-success" type="submit">Sign in</button>
     </form>
+    </div>
     
 {% endblock content %}
