--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,7 @@
 {% extends "_base.html" %}
 {% load crispy_forms_tags %}
+{% load socialaccount %}
+{% load static %}
 
 {% block title %}Join Cookbook{% endblock title %}
 
@@ -9,7 +11,10 @@
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-    <button class="btn btn-success" type="submit">Create account</button>        
+    <button class="btn btn-success" type="submit">Create account</button>
     </form>
+    <a class="btn btn-primary mt-4 button" href="{% provider_login_url 'github' %}" role="button">
+        <img src="{% static 'images/github.png' %}" width="25" height="25" class="d-inline-block align-text-top">
+    Sign up via GitHub</a>
 
 {% endblock content %}
